@@ -2,6 +2,7 @@ package org.webpieces.router.impl.params;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
 import java.lang.reflect.ParameterizedType;
@@ -20,10 +21,10 @@ import org.webpieces.ctx.api.HttpMethod;
 import org.webpieces.ctx.api.RequestContext;
 import org.webpieces.ctx.api.RouterRequest;
 import org.webpieces.ctx.api.Validation;
-import org.webpieces.router.api.exceptions.BadClientRequestException;
+import org.webpieces.http.exception.BadRequestException;
 import org.webpieces.router.api.exceptions.DataMismatchException;
 import org.webpieces.router.api.exceptions.IllegalArgException;
-import org.webpieces.router.api.exceptions.NotFoundException;
+import org.webpieces.http.exception.NotFoundException;
 import org.webpieces.router.api.extensions.BodyContentBinder;
 import org.webpieces.router.api.extensions.EntityLookup;
 import org.webpieces.router.api.extensions.Meta;
@@ -72,7 +73,7 @@ public class ParamToObjectTranslatorImpl {
 				if(req.multiPartFields.size() > 0)
 					throw new IllegalArgException(e);
 				else //for apis that POST, this is a client error(or developer error when testing)
-					throw new BadClientRequestException(e);
+					throw new BadRequestException(e);
 			}
 		}
 	}
@@ -276,8 +277,8 @@ public class ParamToObjectTranslatorImpl {
 
 	private <T> Object createBean(Class<T> paramTypeToCreate) {
 		try {
-			return paramTypeToCreate.newInstance();
-		} catch (IllegalAccessException | InstantiationException e) {
+			return paramTypeToCreate.getDeclaredConstructor().newInstance();
+		} catch (IllegalAccessException | InstantiationException | InvocationTargetException | NoSuchMethodException e) {
 			throw SneakyThrow.sneak(e);
 		}
 	}
